Version 1.0.0 -Added export to Excel function -refactored some code -removed old code